piechart title & alignment fixed

--- a/frontend/scrolly-test/scss/components/_piechart.scss
+++ b/frontend/scrolly-test/scss/components/_piechart.scss
@@ -7,7 +7,17 @@ body {
 }
 
 .chart-wrapper {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   margin: 0 auto;
+}
+
+#piechart-title {
+  text-align: center;
+  padding-top: 1em;
+}
+#graph__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
